@@ -11,10 +11,9 @@ Description: Likelihood based population viability
   predicts, forecasts and compare various
   growth model types using data cloning.
 License: GPL-2
-Depends: methods, dcmle
+Depends: methods
+Imports: dcmle, coda
 Suggests: snow
 Depends: methods
 SystemRequirements: JAGS (>= 3.0.0)
 URL: http://cran.r-project.org/package=PVAClone, http://dcr.r-forge.r-project.org/
-LazyLoad: yes
-LazyData: true
