@@ -3,6 +3,8 @@ dcmle package version history
 Version 0.1-4, Jan 31, 2012
     * sourceDcExample: topic is coerced to character.
     * Documentation updated.
+    * NAMESPACE updated to export all classes,
+      and import new functions from dclone.
 
 Version 0.1-3, Jan 25, 2012
     * Preparing for new release.
